prevent scrollbar on body, and call resume/stop functions

--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
 body {
   background: url("black-Linen2.png");
+  overflow: hidden;
 }
 
 pre {
